--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Welcome to Nick's Emporium</h1>
 </div>
-<p><a href="garden_vilage.html"> Dreaming of the Garden Village</a></p>
+<p><a href="garden_village.html"> Dreaming of the Garden Village</a></p>
 </body>
 
 
