--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h1>Welcome to Nick's Emporium</h1>
 </div>
 <p><a href="garden_village.html"> Dreaming of the Garden Village</a></p>
+<p><a href="topsy_turvy.html"> Topsy-Turvy</a></p>
+
 </body>
 
 
