--- a/topsy_turvy.html
+++ b/topsy_turvy.html
@@ -1,3 +1,3 @@
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=GCUgzIX9KJ8">
+src="https://www.youtube.com/embed/GCUgzIX9KJ8">
 </iframe>
