--- a/garden_village.html
+++ b/garden_village.html
@@ -1,9 +1,26 @@
-<link href="txtstyle.css" rel="stylesheet" type="text/css" />
+<link href="shortstorystyle.css" rel="stylesheet" type="text/css" />
 
 Dreaming of the Garden Village
-Jeremiah, or Chen Gao Yi, or the filial son, sat on a dusty rug in the basement, his head adorned with twelve long pendants of jade, and his body with dragons.
-The jade was imperfect: the pipe cleaner did not look the same shade of green as in the pictures. But the dragon, made with sharpie on a white polo shirt and tan, khaki pants, seemed almost living to Jeremiah, flying through his clothes, as if to burst out and smash through the asbestos ceiling. There was another boy who had done that. He had drawn a dragon, and then, once the black eyes were dotted, it came alive and flew into heaven. Mother had told Gao Yi that story, with pictures that showed an inky mass of dragon soaring off, to the amazement of the crowd who had gathered, who doubted that the boy could draw a dragon into life. 
-Jeremiah admired that boy, for having courage, and being correct in his courage. He would like to sit under the sun as Gao Yi, as his mother called him, and bow to heaven in his funeral costume. But, he lived in America, where everyone knew him as Jeremiah . So, Jeremiah sat in the basement, and was ashamed. But whomever he was, he had an obligation to his mother, so his head knocked to the ground and shook the asbestos ceiling. When Jeremiah was diagnosed with lung cancer some thirty years later, the doctor asked if he had ever smoked. “No,” replied Jeremiah, “But our basement had an asbestos ceiling; a ceiling full of asbestos”. 
+<p>Jeremiah, or Chen Gao Yi, or the filial son, sat on a dusty rug in the basement, 
+    his head adorned with twelve long pendants of jade, and his body with dragons.
+The jade was imperfect: the pipe cleaner did not look the same shade of green as in the pictures. 
+But the dragon, made with sharpie on a white polo shirt and tan, khaki pants, 
+seemed almost living to Jeremiah, flying through his clothes, 
+as if to burst out and smash through the asbestos ceiling. </p>
+<p>There was another boy who had done that. He had drawn a dragon, and then, 
+    once the black eyes were dotted, it came alive and flew into heaven. 
+    Mother had told Gao Yi that story, with pictures that showed an inky mass of dragon soaring off, 
+    to the amazement of the crowd who had gathered, 
+    who doubted that the boy could draw a dragon into life. </p>
+<p>Jeremiah admired that boy, for having courage, and being correct in his courage. 
+He would like to sit under the sun as Gao Yi, as his mother called him, 
+and bow to heaven in his funeral costume. But, he lived in America, where everyone knew him as Jeremiah.
+ So, Jeremiah sat in the basement, and was ashamed. 
+ But whomever he was, he had an obligation to his mother, 
+ so his head knocked to the ground and shook the asbestos ceiling. 
+ When Jeremiah was diagnosed with lung cancer some thirty years later, 
+ the doctor asked if he had ever smoked. </p>
+ “No,” replied Jeremiah, “But our basement had an asbestos ceiling; a ceiling full of asbestos”. 
 In that moment in the future, thinking of the ceiling, of the asbestos, of the cancer, of his childhood, Jeremiah fuzzily remembered a story his mother told to young Gao Yi, near the end of her life when she was sad and confused.  “Do you want to hear a story Gao Yi? Of when I met the Jade Cat?” she said in Chinese.
 “Who is the Jade Cat?” 
 “When I was very young”.
