--- a/garden_village.html
+++ b/garden_village.html
@@ -31,13 +31,16 @@ In that moment in the future, thinking of the ceiling, of the asbestos, of the c
     into parodic pendants, and in thirty years would be diagnosed with the same thing killing her. 
     She spoke to them, as a mother.  </p>
 ***********************************************
-I was in school when I first heard a Red Guard. 
-“‘My fellow revolutionaries,” the loudspeaker called out to us,  “stop studying! 
-Stop following the intellectual bourgeois! Work for the people! Follow Chairman Mao!”
- What an exciting announcement! Some people ran, some walked, but we all left the school, 
+<p>I was in school when I first heard a Red Guard. </p>
+<p>“‘My fellow revolutionaries,” the loudspeaker called out to us,  “stop studying! 
+Stop following the intellectual bourgeois! Work for the people! Follow Chairman Mao!”</p>
+<p>What an exciting announcement! Some people ran, some walked, but we all left the school, 
  excited by the idea of no more school, of serving Chairman Mao. The first to leave were three boys, 
  Jian Guo, Lian Guo, and Ai Guo. They weren’t related, but they always hung around each other,
-  pulling pranks on teachers and peasants. We called them the three Guos. Once, Jian Guo had thrown a cicada shell into my hair, laughing and running away with the other two Guo’s. He was the ringleader, and a braggart. His father was a low-ranking party official, so he always talked about meeting Chairman Mao. He was childish, and wanted to be something more than a child. Maybe, if they did not stand up, none of us would have left, and it would have just been another school day... Nevermind. I know that isn’t true.
+  pulling pranks on teachers and peasants. We called them the three Guos. Once, Jian Guo had thrown a cicada shell into my hair, 
+  laughing and running away with the other two Guo’s. He was the ringleader, and a braggart. His father was a low-ranking party official, 
+  so he always talked about meeting Chairman Mao. He was childish, and wanted to be something more than a child. 
+  Maybe, if they did not stand up, none of us would have left, and it would have just been another school day... Nevermind. I know that isn’t true.</p>
 I ended up working more at my parents Coop store, a small shack with a variety of small toys and candies, and a large barrel of propane. We used to use propane lanterns. I was always afraid of lighting our lanterns; that they might burn me, set the entire house alight. And I would just stand there, in my imagination, watching the flickering light consume my house. I disliked fire, but otherwise red was my favorite color. I loved watermelon and pomegranates, oftentimes stealing them from the peasants. My name was Little Red. I wanted to become a Red Guard more than anything.
 When I told my mother this, she told me to forget about it. I was too young, most Red Guards were in high school or University. I think she was afraid, but she would never say that. So she said I was too young, and that she was my mother, so I must listen to her. Talking back scared me, so I spent most of every day imagining being a Red Guard instead.  
 One day, Jian Guo came into our store flanked by his friends, his hip aggressively thrust forward, like a needle pointing his way. He wore a saggy, dark-green military outfit, and a red armband, carrying a small and empty plastic jug. He looked ridiculous, and I later learned he borrowed his older brother’s Red Guard outfit. However, in the moment, all I felt was jealousy. As his eyes scanned the shop, they fell upon me and he asked “Hey, Xiao Hong, how do I look?”.
