--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </div>
 <p><a href="garden_village.html"> Dreaming of the Garden Village</a></p>
 <p><a href="topsy_turvy.html"> Topsy-Turvy</a></p>
+<p><a href = "lady_fiametta.html"> Elegy of Lady Fiametta Podcast</a></p>
 
 </body>
 
