--- a/lady_fiametta.html
+++ b/lady_fiametta.html
@@ -1,11 +1,7 @@
-<div style="margin:0 auto;text-align:center">
 
-    <!-- Div align in the middle -->
-    <div style="margin-left:auto;margin-right:auto;text-align:center">
-        <audio controls>
-            <source src="fiametta_podcast.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-    </div>
-
+<div class = "center">
+    <audio controls>
+        <source src="fiametta_podcast.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
 </div>
