--- a/lady_fiametta.html
+++ b/lady_fiametta.html
@@ -1,5 +1,5 @@
 
-<div class = "center">
+<div style = "text-align:center;">
     <audio controls>
         <source src="fiametta_podcast.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
