--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p><a href="garden_village.html"> Dreaming of the Garden Village</a></p>
 <p><a href="topsy_turvy.html"> Topsy-Turvy</a></p>
 <p><a href = "lady_fiametta.html"> Elegy of Lady Fiametta Podcast</a></p>
-<p><a href = "dreaming_of_the_garden_village.html"> Dreaming of the Garden Village (PDF)</a></p>
+<p><a href = "dreaming_of_the_garden_village.html"> Dreaming of the Garden Village (PDF></a></p>
 
 </body>
 
