--- a/lady_fiametta.html
+++ b/lady_fiametta.html
@@ -1,7 +1,7 @@
 
 <div style = "text-align:center;">
     <audio controls>
-        <source src="fiametta_podcast.mp3" type="audio/mpeg">
+        <source src="audio/fiametta_podcast.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
     </audio>
 </div>
