--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <body>
-  <h1>Welcome to Nick's Emporium</h1>
+  <h1>LKAJSLFJLKSAJFLSAJFLKSAJLK</h1>
 </div>
 <p><a href="garden_village.html"> Dreaming of the Garden Village</a></p>
 <p><a href="topsy_turvy.html"> Topsy-Turvy</a></p>
