--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ https://templatemo.com/tm-505-stacked
               <a href="#1" class="nav__link c-blue"><img src="img/home-icon.png" alt=""></a>
             </li>
             <li class="nav__item">
-              <a href="#2" class="nav__link c-yellow scrolly"><img src="img/about-icon.png" alt=""></a>
+              <a href="#2" class="nav__link c-yellow scrolly"><img src="img/ProgProjects.png" alt=""></a>
             </li>
             <li class="nav__item">
-              <a href="#3" class="nav__link c-red"><img src="img/projects-icon.png" alt=""></a>
+              <a href="#3" class="nav__link c-red"><img src="img/WRitings.png" alt=""></a>
             </li>
             <li class="nav__item">
               <a href="#4" class="nav__link c-green"><img src="img/contact-icon.png" alt=""></a>
