--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
- <link href = 'Homework_1/index.html'> Keyboard!</link>
+ <a href = 'Homework_1/index.html'> Keyboard!</a>
 </html>
