--- a/filled-in.html
+++ b/filled-in.html
@@ -1,5 +1,5 @@
 
 
   <iframe width="420" height="315"
-src="https://www.youtube.com/embed/5CWUZkEWr44">
+src="https://www.youtube.com/embed/5CWUZkEWr44" allowfullscreen>
 </iframe>
