--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <!doctype html>
  <a href = 'ADSR_Keyboard/index.html'> Keyboard!</a>
+ <p></p>
+ <a href = 'Sound_Modeling/index.html'>Sound Modeling</a>
 </html>
