--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
  <a href = 'ADSR_Keyboard/index.html'> Keyboard!</a>
  <p></p>
  <a href = 'Sound_Modeling/index.html'>Sound Modeling</a>
+ <a href ='Felix_Audio_Player/index.html'>Felix Audio Player</a>
 </html>
