--- a/Felix_Audio_Player/index.html
+++ b/Felix_Audio_Player/index.html
@@ -23,6 +23,9 @@
   <p id = "qi">Queued Iteration:</p>
   <p id ="ci">Current Iteration:</p>
   <p id = "error">Error: </p>
+  <iframe width="420" height="315"
+src="https://youtube.com/embed/fFNaDGpGR3A" allowfullscreen>
+</iframe>
 </body>
 <script src="main.js"> </script>
 
