--- a/contact.html
+++ b/contact.html
@@ -21,23 +21,20 @@
     </div>
 
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="cv.html">CV</a>
-        <a href="#contact">Contact</a>
+        <a class="active" a href="contact.html">Contact</a>
         
       </div>
-    
+
+      <body>
+        <p>Email: nicholasdentoncheng@gmail.com</p>
+        <p>School Email: njd2135@columbia.edu</p>
+
+        <p>Phone Number: 2038038986</p>
+
+      </body>
  
- <body>
-    <p></p>
-    <font size = "+2">About:</font>
-    <p>Hello! My name is Nicholas Denton-Cheng, a Senior at Columbia College, graduating with a 
-        Computer Science degree. I am interested in the intersection of critical theory and 
-        programming, specifically in the fields of database design and computational sound. I 
-        also enjoy writing and making short films. Hope you have a lovely day!
-    </p>
-    <img src = Selfie.jpg width="150" 
-    height="200"> </img>
- </body>
+ </p>
 </html>
