--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     </form>
     <p></p>
 
-    <form action="ADSR_Keyboard/index.html">
+    <form action="Filter_Keyboard/index.html">
         <input type="submit" value="ADSR_Keyboard" />
     </form>
 
