--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <p></p>
     <font size = "+2">About:</font>
     <p>Hello! My name is Nicholas Denton-Cheng, a Senior at Columbia College, graduating with a 
-        Computer Science degree. I am interested in the intersection of critical theory and 
-        programming, specifically in the fields of database design and computational sound. I 
-        also enjoy writing and making short films. Hope you have a lovely day!
+        Computer Science degree. I am interested in the software architecture and database design
+        Currently, I have fallen in love with computational sound and live coding. I also enjoy 
+        writing and making short films. Hope you have a lovely day!
     </p>
     <img src = Selfie.jpg width="150" 
     height="200"> </img>
