--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
         <a href="index.html">Home</a>
         <a class="active" a href="projects.html">Projects</a>
         <a href="cv.html">CV</a>
+        <a href="upcoming_projects.html">Upcoming</a> 
         <a href="contact.html">Contact</a>
         
       </div>
