--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <a class="active" href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="cv.html">CV</a>
+        <a href="upcoming_projects.html">Upcoming</a> 
         <a href="contact.html">Contact</a>
+
         
       </div>
     
