--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,10 @@
     <font size = "+2">Computer Science Projects</font>
     <p></p>
 
-    
+    <form action="pst/index.html">
+      <input type="submit" value="Pitch Set Theory" />
+  </form>
+  <p></p>
     <form action="Felix_Audio_Player/index.html">
         <input type="submit" value="Felix - Live Coding Language" />
     </form>
