--- a/pst/index.html
+++ b/pst/index.html
@@ -5,11 +5,14 @@
     <title> Pitch Set Implementation </title>
     </head>
   <body>
-    
+    <p>The pitch set orientation either transposes, inverts, or retrogrades at random. User can also use those functions and effect the result.
+      After playing the play button each time there will be a moment of crunchy sound--please ignore,
+      the sound will dissappear quickly
+    </p>
     <button id ="play">Play</button>
     <p></p>
     <label for="pitchSequence">Pitch Sequence:</label>
-    <input type="text" id="pitchSequence" name="pitchSequence" value="A3 B3 C4 G2"><br><br>
+    <input type="text" id="pitchSequence" name="pitchSequence" value="C D E F"><br><br>
     <button id = "transpose">Transpose</button>
     <button id = "inverse">Inverse</button>
     <button id = "retrograde">Retrograde</button>
