--- a/Felix_Audio_Player/index.html
+++ b/Felix_Audio_Player/index.html
@@ -3,30 +3,95 @@
 
 <head>
   <meta charset="utf‐8">
-  <title> Felix </title>
-</head>
+  <title> Felix Goes on a Walk</title>
 
-<body>
-  <p>This is a simple, sample-based coding language. Within a statement
-    there are three values demarcated by "@" signs: sample name, gain value,
-    and sleep value. Sample name is a string entry, and gain and sleep values 
-    are equations whose values are evaluated by conventional javascript syntax.
-    The sleep value is the number of seconds between each repetition of the
-    sample.
-  </p>
-  <p>Example:</p>
-  <p>clap@1@1</p>
-  <textarea type="text" id = "code" name="code"
-  rows="10" cols="33">clap@1@1</textarea>
-  <p></p>
-  <button>re-evaluate</button>
-  <p id = "qi">Queued Iteration:</p>
-  <p id ="ci">Current Iteration:</p>
-  <p id = "error">Error: </p>
-  <iframe width="420" height="315"
-src="https://youtube.com/embed/fFNaDGpGR3A" allowfullscreen>
-</iframe>
+</head>
+<link rel="stylesheet" href="table.css">
+<link rel="stylesheet" href="text.css">
+<body style="background-color:tan">
+  <div style="display:none;">
+    <img id="bird" src="images/bird_flock.png" />
+    <img id="felix" src="images/Felix.png" />
+    <img id="dog" src="images/dog.png"  />
+    <img id="cricket" src="images/cricket.png"  />
+    <img id="hammer" src ="images/hammer.png"/>
+    <img id = "whisper" src = "images/whisper.png"/>
+
+  </div>
+  <h1 class="centered">Felix Goes On A Walk</h1>
+  <div class="row">
+    <div class ="column">
+      <div class ="rounded">
+
+      <p>WALKER DETAILS</p>
+      <p id = "walkerposition"></p>
+      <input id = "walkspeed" value = "1" class = "ip1"> Walking Speed </input>
+      <p></p>
+      <input id = "walksize" value = "0.1"class = "ip1"> Step Length </input>
+      <p></p>
+
+      <input id = "walktype" value = "wood_step"class = "ip1"> Footstep Type </input>
+      <p></p>
+
+      <input id = "xywalkangle" value = "0"class = "ip1"> XY Angle </input>
+      <p></p>
+      <input id = "yzwalkangle" value = "0"class = "ip1"> YZ Angle </input>
+      <p></p>
+
+      <input id = "walkgain" value = "1"class = "ip1"> Walk Gain </input>
+      <p></p>
+      <button id = "updatewalk">Update Walk</button>
+      <p>OBJECT DETAILS</p>
+      <input id = "objectspeed" value = "1"class = "ip1"> Rest between sound</input>
+      <p></p>
+      <input id = "objecttype" value = "bird_chirp"class = "ip1"> Type </input>
+      <p></p>
+      <input id = "objectgain" value = "1"class = "ip1"> Gain </input>
+      <p></p>
+      <input id = "objectx" value = "1"class = "ip1"> X</input>
+      <p></p>
+      <input id = "objecty" value = "1"class = "ip1"> Y </input>
+      <p></p>
+      <input id = "objectz" value = "1"class = "ip1"> Z </input>
+      <p></p>
+      <button id="addobject">Add Object</button>
+      <p></p>
+    </div>
+
+    <div class = 'rounded'>
+      <label for="object-list">Object List</label>
+      <div id="object-list"></div>
+    </div>
+    
+    </div>
+
+    <div class = "column">
+      <p>X-PLANE</p>
+      <div class = 'rounded-c'>
+      <canvas id="xCanvas" width="500" height="200"
+       >
+        Your browser does not support the HTML5 canvas tag.
+      </canvas>
+    </div>
+
+      <p>Y-PLANE</p>
+      <div class = 'rounded-c'>
+      <canvas id="yCanvas" width="500" height="200"
+        >
+        Your browser does not support the HTML5 canvas tag.
+      </canvas>
+    </div>
+
+      <p>Z-PLANE</p>
+      <div class = 'rounded-c'>
+      <canvas id="zCanvas" width="500" height="200"
+        >
+        Your browser does not support the HTML5 canvas tag.
+      </canvas>
+    </div>
+
+   </div>
+  </div>
 </body>
 <script src="main.js"> </script>
-
 </html>
