--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -7,76 +7,88 @@
 
 </head>
 <link rel="stylesheet" href="table.css">
-
-<body>
+<link rel="stylesheet" href="text.css">
+<body style="background-color:tan">
   <div style="display:none;">
     <img id="bird" src="images/bird_flock.png" />
     <img id="felix" src="images/Felix.png" />
     <img id="dog" src="images/dog.png"  />
     <img id="cricket" src="images/cricket.png"  />
+    <img id="hammer" src ="images/hammer.png"/>
+    <img id = "whisper" src = "images/whisper.png"/>
 
   </div>
+  <h1 class="centered">Felix Goes On A Walk</h1>
   <div class="row">
     <div class ="column">
-      <button id="start">Start/Reset</button>
+      <div class ="rounded">
+
       <p>WALKER DETAILS</p>
       <p id = "walkerposition"></p>
-
-      <input id = "walkspeed" value = "1"> Walking Speed </input>
+      <input id = "walkspeed" value = "1" class = "ip1"> Walking Speed </input>
       <p></p>
-      <input id = "walksize" value = "0.1"> Step Length </input>
-      <p></p>
-
-      <input id = "walktype" value = "wood_step"> Footstep Type </input>
+      <input id = "walksize" value = "0.1"class = "ip1"> Step Length </input>
       <p></p>
 
-      <input id = "xywalkangle" value = "0"> XY Angle </input>
-      <p></p>
-      <input id = "yzwalkangle" value = "0"> YZ Angle </input>
+      <input id = "walktype" value = "wood_step"class = "ip1"> Footstep Type </input>
       <p></p>
 
-      <input id = "walkgain" value = "1"> Walk Gain </input>
+      <input id = "xywalkangle" value = "0"class = "ip1"> XY Angle </input>
+      <p></p>
+      <input id = "yzwalkangle" value = "0"class = "ip1"> YZ Angle </input>
+      <p></p>
+
+      <input id = "walkgain" value = "1"class = "ip1"> Walk Gain </input>
       <p></p>
       <button id = "updatewalk">Update Walk</button>
       <p>OBJECT DETAILS</p>
-      <input id = "objectspeed" value = "1"> Rest between sound</input>
+      <input id = "objectspeed" value = "1"class = "ip1"> Rest between sound</input>
       <p></p>
-      <input id = "objecttype" value = "bird_chirp"> Type </input>
+      <input id = "objecttype" value = "bird_chirp"class = "ip1"> Type </input>
       <p></p>
-      <input id = "objectgain" value = "1"> Gain </input>
+      <input id = "objectgain" value = "1"class = "ip1"> Gain </input>
       <p></p>
-      <input id = "objectx" value = "1"> X</input>
+      <input id = "objectx" value = "1"class = "ip1"> X</input>
       <p></p>
-      <input id = "objecty" value = "1"> Y </input>
+      <input id = "objecty" value = "1"class = "ip1"> Y </input>
       <p></p>
-      <input id = "objectz" value = "1"> Z </input>
+      <input id = "objectz" value = "1"class = "ip1"> Z </input>
       <p></p>
       <button id="addobject">Add Object</button>
       <p></p>
+    </div>
 
+    <div class = 'rounded'>
       <label for="object-list">Object List</label>
       <div id="object-list"></div>
+    </div>
     
     </div>
 
     <div class = "column">
       <p>X-PLANE</p>
+      <div class = 'rounded-c'>
       <canvas id="xCanvas" width="500" height="200"
-        style="border:1px solid #d3d3d3;">
+       >
         Your browser does not support the HTML5 canvas tag.
       </canvas>
+    </div>
 
       <p>Y-PLANE</p>
+      <div class = 'rounded-c'>
       <canvas id="yCanvas" width="500" height="200"
-        style="border:1px solid #d3d3d3;">
+        >
         Your browser does not support the HTML5 canvas tag.
       </canvas>
+    </div>
 
       <p>Z-PLANE</p>
+      <div class = 'rounded-c'>
       <canvas id="zCanvas" width="500" height="200"
-        style="border:1px solid #d3d3d3;">
+        >
         Your browser does not support the HTML5 canvas tag.
       </canvas>
+    </div>
 
    </div>
   </div>
