--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class = "column">
-      <p>X-PLANE</p>
+      <p>X-AXIS</p>
       <div class = 'rounded-c'>
       <canvas id="xCanvas" width="500" height="200"
        >
@@ -74,7 +74,7 @@
       </canvas>
     </div>
 
-      <p>Y-PLANE</p>
+      <p>Y-AXIS</p>
       <div class = 'rounded-c'>
       <canvas id="yCanvas" width="500" height="200"
         >
@@ -82,7 +82,7 @@
       </canvas>
     </div>
 
-      <p>Z-PLANE</p>
+      <p>Z-AXIS</p>
       <div class = 'rounded-c'>
       <canvas id="zCanvas" width="500" height="200"
         >
