--- a/finalprojectdir.html
+++ b/finalprojectdir.html
@@ -2,7 +2,7 @@
     <input type="submit" value="Felix Goes On a Walk" />
 </form>
 <p></p>
-  <form action="magenta_automate/index.html">
-      <input type="submit" value="Blog Post" />
-  </form>
+<form action="FinalProject/Felix Write Up.pdf">
+    <input type="submit" value="Blog Post" />
+</form>
   <p></p>
