--- a/hw5dir.html
+++ b/hw5dir.html
@@ -2,7 +2,7 @@
     <input type="submit" value="Pitch Set Theory" />
 </form>
 <p></p>
-  <form action="FinalProject/Felix Write Up.pdf">
-      <input type="submit" value="Blog Post" />
+  <form action="magenta_automate/index.html">
+      <input type="submit" value="Magenta Automation" />
   </form>
   <p></p>
