--- a/acc_UI/Homework_2/index.html
+++ b/acc_UI/Homework_2/index.html
@@ -2,7 +2,7 @@
     <input type="submit" value="Accessible Website" />
 </form>
 <p></p>
-<form action="Acc_UI_HW_2_Notebook.docx">
+<form action="Acc_UI_HW_2_Notebook.pdf">
     <input type="submit" value="Writeup" />
 </form>
   <p></p>
