--- a/acc_UI/Homework_2/project2.html
+++ b/acc_UI/Homework_2/project2.html
@@ -1,5 +1,5 @@
 <?doctype html>
-<html>
+<html lang="en">
 <head
   <meta charset="utf-8">
   <title>Accessibility Course Overview</title>
@@ -16,16 +16,16 @@
   <a href="#signup"><img src="pics/signup.png" alt = "pics button"></a>
 </div>
 <h1>
-<div id="accessibilitybanner"></div>
+  <div id="links" class="heading1">Accessibility Overview</div>
 </h1>
 <iframe width="420" height="315"
-src="https://www.youtube.com/embed/ZG3C8wGyCnc" allowfullscreen>
+src="https://youtube.com/embed/x3K3gf5MZSo" allowfullscreen>
 </iframe>
 <h2>
 <div id="links" class="heading2">Links</div>
 </h2>
-<img src="pics/dot.png" alt="dot">&nbsp;<a href="https://www.barnardhci.com">Accessibility Research at Hamilton</a><br>
-<img src="pics/dot.png" alt="dot">&nbsp;<a href="https://www.hamilton.edu/offices/dos/accessibility>Disability Services at Hamilton"></a><br>
+<img src="pics/dot.png" alt="dot">&nbsp;<a href="https://www.barnardhci.com"> barnardhci</a><br>
+<img src="pics/dot.png" alt="dot">&nbsp;<a href="https://www.hamilton.edu/offices/dos/accessibility>Disability Services at Hamilton">Accessibility Research at Hamilton</a><br>
 <img src="pics/dot.png" alt="dot">&nbsp;<a href="https://xkcd.com/">XKCD</a><br>
 <img src="pics/dot.png" alt="dot">&nbsp;<a href="https://www.youtube.com/watch?v=HtTyRajRuyY">A11ycasts Videos</a><br>
 
