--- a/Creative_Embedded_Systems/module1/index.html
+++ b/Creative_Embedded_Systems/module1/index.html
@@ -1,8 +1,11 @@
-<form action="writeup.html">
-    <input type="submit" value="Writeup and documentation" />
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/BCsUZ3LAw1E" allowfullscreen>
+</iframe>
+<a href = "https://github.com/nicholasjdc/Embedded_Systems/blob/main/Game_Of_Life/Game_Of_Life.ino">
+    github
+</a>
+<p></p>
+<form action="blogpost.html">
+    <input type="submit" value="Blog Post" />
 </form>
 <p></p>
-<form action="m1video.html">
-    <input type="submit" value="Video" />
-</form>
-  <p></p>
