--- a/Creative_Embedded_Systems/module1/index.html
+++ b/Creative_Embedded_Systems/module1/index.html
@@ -1,7 +1,7 @@
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/BCsUZ3LAw1E" allowfullscreen>
 </iframe>
-<a href = "https://github.com/nicholasjdc/Embedded_Systems/blob/main/Game_Of_Life/Game_Of_Life.ino">
+<a href = "https://github.com/nicholasjdc/Embedded_Systems/tree/main/Game_Of_Life">
     github
 </a>
 <p></p>
