--- a/Creative_Embedded_Systems/Ariel/documentation.html
+++ b/Creative_Embedded_Systems/Ariel/documentation.html
@@ -70,6 +70,10 @@
    with your joystick. If there are any issues, check the inspect element tab, it should be actively
    printing x and y-values to let you know if the movement is being correctly monitored. Hope you enjoy!
   </p>
+  
+  <iframe width="420" height="315"
+src="https://www.youtube.com/embed/8kXfkyEuKqM" allowfullscreen>
+</iframe>
 </body>
 
 </html>
