--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div class="navbar">
         <a class="active" href="index.html">Home</a>
+        <a href="writingProjects.html">Writings</a>
         <a href="projects.html">Projects</a>
         <a href="cv.html">CV</a>
         <a href="upcoming_projects.html">Upcoming</a> 
