--- a/stories/marbled_things.html
+++ b/stories/marbled_things.html
@@ -3,7 +3,7 @@
 
 <!-- Tasks: Add fade in -->
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+<link href="poetry.css" rel="stylesheet">
 
 <h2>Styling a Poem</h2>
 
