--- a/Felix_Audio_Player/index.html
+++ b/Felix_Audio_Player/index.html
@@ -23,6 +23,7 @@
   <p id = "qi">Queued Iteration:</p>
   <p id ="ci">Current Iteration:</p>
   <p id = "error">Error: </p>
+  <p>Valid Sounds: anvil_drill, bird_chirp, clap, cricket, dog_bark, glass_step, hammering, layered_whisper, metal_plate, secret_whisper, umbrella_open, water_drop, wet_step, wood_step</p>
   <iframe width="420" height="315"
 src="https://youtube.com/embed/fFNaDGpGR3A" allowfullscreen>
 </iframe>
