--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,9 @@
  
  <body style = "background-color: bisque;">
   <p></p>
-  <font size = "+2">Computer Science Projects</font>
+  <div class = "non_bold_subtitle">
+  <font size = "+2">Projects</font>
+</div>
   <p></p>
 
   <form action="pst/index.html">
@@ -74,19 +76,13 @@
   <form action="Sound_Modeling/phone.html">
     <input type="submit" value="Phone Sound Modeling" />
 </form>
+<div class = "non_bold_subtitle">
+  <font size = "+2">Github</font>
+</div>
 <p></p>
   <a href = "https://github.com/nicholasjdc">https://github.com/nicholasjdc</a>
   <p></p>
-  <font size = "+2">Film Projects</font>
-  <p></p>
-  <iframe width="420" height="315"
-src="https://www.youtube.com/embed/GCUgzIX9KJ8" allowfullscreen>
-</iframe>
 
-<iframe width="420" height="315"
-src="https://www.youtube.com/embed/5CWUZkEWr44" allowfullscreen>
-</iframe>
-    
  </body>
 </html>
 
