--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,35 @@
  <body style = "background-color: bisque;">
   <p></p>
   <div class = "non_bold_subtitle">
-  <font size = "+2">Projects</font>
+  <font size = "+2">WebGL & Threejs</font>
+</div>
+  <p></p>
+  <div class ="story_display_container">
+
+    <div class ="story_display">
+  <a href = "https://tranquil-froyo-20a9a1.netlify.app/">
+    <div class="story_block">
+    <div class = "story_title_block"><div class = "story_title">Night at The Club</div></div>
+    <img src="dancers.png" class = "story_img">
+    <div class = "story_summary_display_block"><div class ="story_summary_display">Shadows, Lighting, Spotlight</div></div>                </div>
+</a>
+<a href = "https://dynamic-bublanina-6b9777.netlify.app/">
+  <div class="story_block">
+  <div class = "story_title_block"><div class = "story_title">The Unknown</div></div>
+  <img src="unknown.png" class = "story_img">
+  <div class = "story_summary_display_block"><div class ="story_summary_display">RayTracing, Camera Flare, Shadows, Lighting</div></div>                </div>
+</a>
+<a href = "https://ornate-squirrel-de9ca8.netlify.app/">
+  <div class="story_block">
+  <div class = "story_title_block"><div class = "story_title">Exploring the Cosmos</div></div>
+  <img src="cosmos.png" class = "story_img">
+  <div class = "story_summary_display_block"><div class ="story_summary_display">Reflection, Canvas, Automation</div></div>                </div>
+</a>
+</div>
+</div>
+  <p></p>
+  <div class = "non_bold_subtitle">
+  <font size = "+2">Audio & Music</font>
 </div>
   <p></p>
 
