--- a/writingProjects.html
+++ b/writingProjects.html
@@ -79,7 +79,14 @@
           <div class = "author_credit_display_block"><div class = "author_credit_display">Quarto Magazine</div></div>
           <div class = "story_summary_display_block"><div class ="story_summary_display">November 2022</div></div>                </div>
       </a>
- 
+ <a href = "https://wp.nyu.edu/greenestreetreview/2023/12/12/barbarus-dream/">
+  <div class="story_block">
+    <div class = "story_title_block"><div class = "story_title">Barbarus' Dream</div></div>
+    <img src="cosmos.png" class = "story_img">
+    <div class = "author_credit_display_block"><div class = "author_credit_display">Greene Street Review</div></div>
+    <div class = "story_summary_display_block"><div class ="story_summary_display">Fall 2023</div></div>                </div>
+
+ </a>
 </div>
   </div>
 
