--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <a href="https://transcendent-seahorse-341c0d.netlify.app/login"> <p>An Annotated Sinophone Bibliography</p> <img src="bibliography-screenshot.png"></a>
  <a href="https://ornate-squirrel-de9ca8.netlify.app/"><p>Cosmos</p><img src="cosmos.png"></a>
  <a href="https://tranquil-froyo-20a9a1.netlify.app/"><p>Dancers</p><img src="dancers.png"></a>
-
+<a href="https://cheery-rugelach-5fa445.netlify.app/"><p>p5 Tint Slider</p><img src="tint-sliders.png"></a>
   <h2>
     Stories
   </h2>
