--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <title>NDC</title>
 </head>
 <body>
-  
+  <div style="text-align: center;">
+  <h1>Object of the Week</h1>
+  <p>Meat Theater</p>
+  <img src="meat-theater.png" alt="Meat Theater" width="100" height="400">
+    <a href="https://drive.google.com/file/d/1aCCg0sacH68c2i6kPiLiPkHJzdmEFe5M/view?usp=sharing"><p>Meat Theater Download -- Windows</p></a>
+    <a href="https://drive.google.com/file/d/1BqJ7CjLlaNXkO1n0F4WoswPXL6aHVbrN/view?usp=sharing"><p>Meat Theater Download-- Linux</p></a>
+    </div>
   <h2>Websites</h2>
   <a href="https://mellifluous-moonbeam-03e837.netlify.app/"><p>Felix The Machine</p>  <img src="felix-screenshot.png"></a>
  <a href="https://transcendent-seahorse-341c0d.netlify.app/login"> <p>An Annotated Sinophone Bibliography</p> <img src="bibliography-screenshot.png"></a>
