--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <a href="https://drive.google.com/file/d/1BqJ7CjLlaNXkO1n0F4WoswPXL6aHVbrN/view?usp=sharing"><p>Meat Theater Download-- Linux</p></a>
     </div>
   <h2>Websites</h2>
-  <a href="https://mellifluous-moonbeam-03e837.netlify.app/"><p>Felix The Machine</p>  <img src="felix-screenshot.png"></a>
- <a href="https://transcendent-seahorse-341c0d.netlify.app/login"> <p>An Annotated Sinophone Bibliography</p> <img src="bibliography-screenshot.png"></a>
- <a href="https://66c4c9fb08eb9515a9d8602b--friendly-licorice-9f97e5.netlify.app/"><p>Space Math</p><img src="space-math.png"></a>
- <a href="https://ornate-squirrel-de9ca8.netlify.app/"><p>Cosmos</p><img src="cosmos.png"></a>
- <a href="https://tranquil-froyo-20a9a1.netlify.app/"><p>Dancers</p><img src="dancers.png"></a>
-<a href="https://cheery-rugelach-5fa445.netlify.app/"><p>p5 Tint Slider</p><img src="tint-sliders.png"></a>
+  <a href="https://mellifluous-moonbeam-03e837.netlify.app/"><p>Felix The Machine</p>  <img class="general-image" src="felix-screenshot.png"></a>
+ <a href="https://transcendent-seahorse-341c0d.netlify.app/login"> <p>An Annotated Sinophone Bibliography</p> <img class="general-image" src="bibliography-screenshot.png"></a>
+ <a href="https://66c4c9fb08eb9515a9d8602b--friendly-licorice-9f97e5.netlify.app/"><p>Space Math</p><img class="general-image" src="space-math.png"></a>
+ <a href="https://ornate-squirrel-de9ca8.netlify.app/"><p>Cosmos</p><img class="general-image" src="cosmos.png"></a>
+ <a href="https://tranquil-froyo-20a9a1.netlify.app/"><p>Dancers</p><img class="general-image" src="dancers.png"></a>
+<a href="https://cheery-rugelach-5fa445.netlify.app/"><p>p5 Tint Slider</p><img class="general-image" src="tint-sliders.png"></a>
   <h2>
     Stories
   </h2>
