--- a/index.html
+++ b/index.html
@@ -12,12 +12,46 @@
 <body>
   <div style="text-align: center;">
   <h1>Object of the Week</h1>
-  <p>Meat Theater</p>
-  <img src="meat-theater.png" alt="Meat Theater" width="100" height="400">
-    <a href="https://drive.google.com/file/d/1aCCg0sacH68c2i6kPiLiPkHJzdmEFe5M/view?usp=sharing"><p>Meat Theater Download -- Windows</p></a>
-    <a href="https://drive.google.com/file/d/1BqJ7CjLlaNXkO1n0F4WoswPXL6aHVbrN/view?usp=sharing"><p>Meat Theater Download-- Linux</p></a>
+  <h2>Fritz: Stones</h2>
+<div class="grid-container">
+        <!-- Replace placeholder images with your actual section images -->
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r1c1.png" alt="Section 1">
+            <div class="section-label">Row 1, Col 1</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r1c2.png" alt="Section 2">
+            <div class="section-label">Row 1, Col 2</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r1c3.png" alt="Section 3">
+            <div class="section-label">Row 1, Col 3</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r1c4.png" alt="Section 4">
+            <div class="section-label">Row 1, Col 4</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r2c1.png" alt="Section 5">
+            <div class="section-label">Row 2, Col 1</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r2c2.png" alt="Section 6">
+            <div class="section-label">Row 2, Col 2</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r2c3.png" alt="Section 7">
+            <div class="section-label">Row 2, Col 3</div>
+        </div>
+        <div class="section" onclick="openFullscreen(this)">
+            <img src="stones_img/r2c4.png" alt="Section 8">
+            <div class="section-label">Row 2, Col 4</div>
+        </div>
     </div>
-  <h2>Websites</h2>
+    </div>
+  <h2>Objects</h2>
+      <a href="https://drive.google.com/file/d/1BqJ7CjLlaNXkO1n0F4WoswPXL6aHVbrN/view?usp=sharing"><p>Meat Theater Download-- Linux</p> <img class="general-image" src="meat-theater.png"></a>
+
   <a href="https://mellifluous-moonbeam-03e837.netlify.app/"><p>Felix The Machine</p>  <img class="general-image" src="felix-screenshot.png"></a>
  <a href="https://transcendent-seahorse-341c0d.netlify.app/login"> <p>An Annotated Sinophone Bibliography</p> <img class="general-image" src="bibliography-screenshot.png"></a>
  <a href="https://66c4c9fb08eb9515a9d8602b--friendly-licorice-9f97e5.netlify.app/"><p>Space Math</p><img class="general-image" src="space-math.png"></a>
